--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- OG thumbnail -->
   <meta property="og:title" content="Whatsapp" />
-  <meta property="og:image" content="https://i.imgur.com/RCuNga7.jpeg" />
+  <meta property="og:image" content="https://i.imgur.com/LhPp2RN.jpeg" />
   <meta property="og:description" content="Click here to continue to WhatsApp 💚💚" />
   <meta name="theme-color" content="#25D366" />
 
